# dual_momentum

./: .gitignore  .gitlab-ci.yml  README.md  config.json  periodic_update.py  requirements.txt  setup.cfg  top_2300_symbols.csv
src/dualmom/: app.py  bt_data.py  func_workspace.py  periodic_update.py  strategy.py
src/utils/: email_tools.py  gmail_tool.py  stock_tools.py  strategy.py  symbol.py
tests/: test_periodic.py  test_stock_tools.py
utils/: email_tools.py  stock_tools.py
