[metadata]
name = dualmom
description = Dual Momentum stock invest strategy
author = Jameson Marshall
platforms = linux
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    dualmom
install_requires = 
    bta-lib>=1
    pandas>=1.4
    selenium>=4.1
    tda-api>=1.5
    tabulate>=0.8
    pytest>=7
    python-dotenv>=0.20
    google-api-python-client==2.46.0
    google-auth-httplib2==0.1.0
    google-auth-oauthlib==0.5.1
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no
